<resources>
    <string name="app_name">JPAWarehose</string>
    <string name="reTry">تلاش مجدد</string>
    <string name="dismiss">بستن</string>
    <string name="dataSendingIsEmpty">اطلاعات ارسالی خالی است</string>
    <string name="dataReceivedIsEmpty">اطلاعات دریافت شده خالی است</string>
    <string name="onAuthenticationError">اثر انگشت شما تایید نشد</string>
    <string name="userNameIsEmpty">نام کاربری را وارد نمایید</string>
    <string name="passcodeIsEmpty">رمز ورود را وارد نمایید</string>
    <string name="bePatient">شکیبا باشید…</string>
    <string name="userName">نام کاربری</string>
    <string name="description">توضیحات</string>
    <string name="password">رمز ورود</string>
    <string name="enter">ورود</string>
    <string name="welcome">خوش آمدید.</string>
    <string name="loginDescription">اپلیکیشن هومن هلدینگ ابزاری برای آسانتر شدن تمامی فرآیندهایتان</string>
    <string name="loginByBiometric">ورود با اثر انگشت</string>
    <string name="update">بروزرسانی اطلاعات</string>
    <string name="updateOn">بروزرسانی براساس :</string>
    <string name="products">کالاها</string>
    <string name="locations">لوکیشن</string>
    <string name="brands">برندها</string>
    <string name="supplier">تامین کننده</string>
    <string name="suppliers">تامین کننده ها</string>
    <string name="doUpdate">انجام بروزرسانی</string>
    <string name="updateIsSuccess">بروزرسانی با موفقیت انجام شد</string>
    <string name="saveReceipt">ثبت رسید</string>
    <string name="chooseSupplier">انتخاب تامین کننده</string>
    <string name="pageNumber">شماره برگه</string>
    <string name="pageNumberDot">شماره برگه :</string>
    <string name="productCode">کد کالا</string>
    <string name="productCodeDot">کد کالا :</string>
    <string name="add">اضافه کردن</string>
    <string name="carton">کارتن</string>
    <string name="packet">بسته</string>
    <string name="packetRemaining">بسته مانده</string>
    <string name="dateDot">تاریخ :</string>
    <string name="date">تاریخ</string>
    <string name="search">جستجو</string>
    <string name="receiptNumberIsEmpty">شماره برگه را وارد کنید</string>
    <string name="receiptNumberHint">فقط عدد</string>
    <string name="doYouWantToDeleteReceipt">ایا برای حذف رسید مطمئن هستید؟</string>
    <string name="arrange">چیدمان</string>
    <string name="home">صفحه اصلی</string>
    <string name="chooseReceipt">انتخاب رسید</string>
    <string name="confirmAndSend">تایید و ارسال</string>
    <string name="replace">جایگذاری کردن</string>
    <string name="scanQR">اسکن لوکیشن</string>
    <string name="count">تعداد</string>
    <string name="countEmpty">تعداد را وارد نمایید</string>
    <string name="countIsInvalidate">تعداد را بصورت صحیح وارد نمایید</string>
    <string name="scanQRCode">لطفا دوربین را روبروی بارکد بگیرید</string>
    <string name="qrCodeNotId">تصویر اسکن شده اشتباه است</string>
    <string name="amountIsOverLoad">مقدار وارد شده بیشتر از اندازه است</string>
    <string name="amountIsLessThenAmount">مقدار وارد شده کمتر از اندازه است</string>
    <string name="fullNameDot">نام و نام خانوادگی :</string>
    <string name="mobileNumberDot">شماره تلفن همراه :</string>
    <string name="personnelCodeDot">کد پرسنلی :</string>
    <string name="doYouWantToExitApp">آیا برای خروج از برنامه مطمئن هستید؟</string>
    <string name="ErrorOnCompletingOnReceipt">چیدمان کالای ( %1$s ) بصورت کامل انجام نشده است</string>
    <string name="qrCodeNotFoundInReceipt">لوکیشن اسکن شده در رسید جود ندارد</string>
    <string name="orderBy">مرتب سازی بر اساس</string>
    <string name="productName">نام کالا</string>
    <string name="DESC">نزولی</string>
    <string name="ASC">صعودی</string>
    <string name="logOut">خروج از حساب کاربری</string>
    <string name="doYouWantToExitAccount">آیا برای خروج از حساب کاربری مطمئن هستید؟</string>
    <string name="fingerprint">ورود با اثر انگشت</string>
    <string name="actionIsDone">انجام شد</string>
    <string name="ipIsIncorrect">آدرس وارد شده اشتباه است</string>
    <string name="newIp">ip</string>
    <string name="ipPassword">ip password</string>
    <string name="passwordIsInCorrect">رمز اشتباه است</string>
    <string name="detail">جزییات</string>
    <string name="plus">+1</string>
    <string name="reduce">1-</string>
    <string name="space"> </string>
    <string name="dote">:</string>
    <string name="historyOfSaveReceipt">تاریخچه</string>

    <string name="logoDescription">logoDescription</string>
    <string name="userNameDescription">username</string>
    <string name="passwordDescription">password</string>
    <string name="fingerPrintDescription">fingerprint</string>
    <string name="closeDescription">close</string>
    <string name="deleteDescription">delete</string>
    <string name="backgroundDescription">background</string>
    <string name="locationDescription">location</string>
    <string name="historyDescription">history</string>
    <string name="updateDescription">update</string>
    <string name="homeDescription">home</string>
    <string name="shelfDescription">shelf</string>



</resources>