<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.hoomanholding.jpawarehose.view.fragment.update.UpdateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColorVariant">


        <LinearLayout
            android:id="@+id/linearLayoutPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="-13dp"
            android:background="@drawable/drawable_border_curve"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_mask_group_1"
                app:tint="@color/primaryColor"
                android:contentDescription="@string/logoDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:fontFamily="@font/yekan_bakh_bold"/>

        </LinearLayout>


        <TextView
            android:id="@+id/textViewUpdateOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutPageTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/updateOn"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/yekan_bakh_bold"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"/>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewUpdateOn"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/drawable_border"
            android:layoutDirection="rtl"
            android:columnCount="3">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/yekan_bakh_medium"
                android:button="@drawable/drawable_checkbox"
                android:text="@string/brands"
                android:textSize="@dimen/_10sdp"
                android:checked="@={viewModel.brandLiveData}"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/yekan_bakh_medium"
                android:button="@drawable/drawable_checkbox"
                android:text="@string/products"
                android:textSize="@dimen/_10sdp"
                android:checked="@={viewModel.productLiveData}"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/yekan_bakh_medium"
                android:button="@drawable/drawable_checkbox"
                android:text="@string/locations"
                android:textSize="@dimen/_10sdp"
                android:checked="@={viewModel.locationLiveData}"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/yekan_bakh_medium"
                android:button="@drawable/drawable_checkbox"
                android:text="@string/suppliers"
                android:textSize="@dimen/_10sdp"
                android:checked="@={viewModel.supplierLiveData}"/>

        </GridLayout>


        <com.hoomanholding.jpawarehose.view.custom.JpaButton
            android:id="@+id/buttonDoUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="@id/gridLayout"
            app:layout_constraintTop_toBottomOf="@id/gridLayout"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/primaryColor"
            android:textSize="@dimen/_10sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:fontFamily="@font/yekan_bakh_bold"
            app:cornerRadius="@dimen/_30sdp"
            android:textColor="@color/primaryColorVariant"
            android:text='@string/doUpdate'
            app:icon="@drawable/ic_refresh"
            app:iconGravity="end"
            app:iconTint="@color/primaryColorVariant"/>


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_5sdp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/loadign_gif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/buttonDoUpdate" />


        <TextView
            android:id="@+id/textViewPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/yekan_bakh_bold"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="@id/gifImageView"
            app:layout_constraintBottom_toBottomOf="@id/gifImageView"
            app:layout_constraintStart_toStartOf="@id/gifImageView"
            app:layout_constraintEnd_toEndOf="@id/gifImageView"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
