<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.hoomanholding.jpawarehose.viewmodel.SplashViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColorVariant">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mask_group_1"
            android:alpha="0.05"/>

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:fontFamily="@font/kalameh_semibold"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/white"
            android:text="@string/loginDescription"
            android:fontFamily="@font/kalameh_light"/>

        <FrameLayout
            android:id="@+id/frameLayoutLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logo"
                android:contentDescription="@string/logoDescription" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/frameLayoutIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_splash_icon"
                android:contentDescription="@string/logoDescription" />

        </FrameLayout>

        <com.hoomanholding.jpawarehose.view.custom.JpaButton
            android:id="@+id/buttonReTry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/frameLayoutLogo"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutLogo"
            app:layout_constraintEnd_toEndOf="@id/frameLayoutLogo"
            android:layout_marginTop="@dimen/_15sdp"
            android:minWidth="@dimen/_100sdp"
            android:textSize="@dimen/_12sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:fontFamily="@font/kalameh_semibold"
            app:cornerRadius="@dimen/_5sdp"
            android:text="@string/reTry"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
