<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.hoomanholding.jpawarehose.viewmodel.SaveReceiptViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColorVariant"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mask_group_1"
            android:alpha="0.03"/>

        <TextView
            android:id="@+id/textViewReceipt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/saveReceipt"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:background="@drawable/drawable_border"/>

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/powerSpinnerSupplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/kalameh_light"
            android:background="@drawable/drawable_login_fingerprint"
            android:gravity="center"
            android:hint="@string/chooseSupplier"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/dismiss"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewReceipt"
            app:layout_constraintWidth_percent="0.7"
            app:spinner_arrow_gravity="start"
            app:spinner_arrow_padding="8dp"
            app:spinner_arrow_tint="@color/primaryColor"
            app:spinner_divider_color="@color/dismiss"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_popup_background="@drawable/drawable_spinner_background"
            app:spinner_popup_height="@dimen/_200sdp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_elevation="14dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/powerSpinnerSupplier"
            android:layout_marginTop="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:background="@drawable/drawable_login_fingerprint">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/white"
                app:setTitle="@{@string/dateDot}"
                app:setValue="@{viewModel.dateLiveData}"/>

            <TextView
                android:id="@+id/textViewNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"
                android:text="@string/pageNumberDot"/>

            <EditText
                android:id="@+id/editTextReceiptNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewDate"
                app:layout_constraintEnd_toStartOf="@id/textViewNumber"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:gravity="end"
                android:inputType="number"
                android:hint="@string/receiptNumberHint"
                android:textColorHint="@color/hint"
                android:text="@={viewModel.receiptNumberLiveData}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutNumber"
            app:layout_constraintBottom_toTopOf="@id/buttonSave"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:background="@drawable/drawable_border">

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.5"
                android:background="@drawable/drawable_login_fingerprint"
                android:drawableStart="@drawable/ic_search"
                android:drawableTint="@color/primaryColor"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:textSize="@dimen/_11sdp"
                android:hint="@string/search"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProduct"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/editTextSearch"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="@dimen/_5sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.hoomanholding.jpawarehose.view.custom.JpaButton
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/primaryColor"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/kalameh_semibold"
            app:cornerRadius="@dimen/_30sdp"
            android:textColor="@color/primaryColorVariant"
            android:text='@string/saveReceipt' />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
